margins all around workitems, need to fix alignment

--- a/style2.css
+++ b/style2.css
@@ -36,8 +36,8 @@ body{
 
 	margin-top: 10vh;
 	margin-bottom: 20vh;
-	margin-left: 0px;
-	margin-right: 0px;
+	margin-left: -15px;
+	/*margin-right: 0px;*/
 	padding: 0px;
 	# opacity: 0;
 
@@ -237,6 +237,7 @@ li p{
 	display: flex;
 	flex-direction: row;
 	padding: 0px;
+	margin-left: 15px;
 	/*border-bottom: 1px solid black;*/
 	/*width: 33vw;*/
 }
@@ -324,21 +325,23 @@ li p{
 	display: block;
 	height: 300px;
 	width: 35%;
-	margin-right: 40px;
+	
 
 }
-.workitem.left{
-}
+
 .workitem{
 
-	margin-right: 20px;
+	/*margin-right: 20px;*/
+	margin-left: 15px;
+	margin-right: 15px;
+	margin-bottom: 30px;
 
 	width: 40%;
 	height: 350px;
 	flex-grow:1;	
 	
-	margin-bottom: 20px;
-	border-radius: 5px;
+	/*margin-bottom: 20px;*/
+	border-radius: 10px;
 
     animation: none;
     transition: all 0.3s;
@@ -367,7 +370,7 @@ li p{
   opacity: 0;
   transition: .5s ease;
   background-color: rgba(44, 124, 244, 0.9);
-  border-radius: 5px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
